Fixed icon appearance and alignment

--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@ a {
 .email, .locality, .nickname {
     display: none;
 }
+
+.material-icons.email {
+    margin: 32px;
+    font-size: 32px;
+    text-align: center;
+    display: block;
+}
